--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.15.3",
     "@blueprintjs/core": "^3.48.0",
     "@blueprintjs/icons": "^3.28.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@babel/runtime": "^7.15.3",
-    "normalize.css": "^8.0.1",
     "antd": "^4.16.13",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.15.3",
     "react-lorem-component": "^0.13.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
