--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "@babel/runtime": "^7.15.3",
     "@blueprintjs/core": "^3.50.2",
-    "@blueprintjs/icons": "^3.28.0",
-    "@hookform/resolvers": "^2.8.1",
+
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -15,9 +14,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.3",
-    "react-lorem-component": "^0.13.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
