--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-hook-form": "^7.15.3",
     "react-lorem-component": "^0.13.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
