--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
     "@babel/runtime": "^7.15.3",
     "@blueprintjs/core": "^3.48.0",
     "@blueprintjs/icons": "^3.28.0",
+    "@hookform/resolvers": "^2.8.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
+    "libphonenumber-js": "^1.9.34",
+    "material-ui": "^0.20.2",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-hook-form": "^7.15.3",
     "react-lorem-component": "^0.13.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "sweetalert2": "^11.1.7",
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
