--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
-  "name": "l3",
-  "version": "0.1.0",
+  "name": "pariznmvn.github",
+  "version": "0.0.0",
   "private": true,
   "dependencies": {
-    
+    "antd": "4.16.13",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "web-vitals": "1.1.2",
+    "normalize.css": "8.0.1",
+    "react-scripts": "4.0.3",
+    "@babel/runtime": "7.15.4",
+    "react-hook-form": "7.15.3",
+    "@blueprintjs/core": "3.49.1",
+    "@blueprintjs/icons": "3.29.0",
+    "react-lorem-component": "0.13.0",
+    "@testing-library/react": "11.2.7",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/user-event": "12.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "react-scripts": "latest"
   }
 }
