--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pariznmvn.github",
+  "name": "l5",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
@@ -9,14 +9,21 @@
     "web-vitals": "1.1.2",
     "normalize.css": "8.0.1",
     "react-scripts": "4.0.3",
+    "react-dropzone": "^11.4.2",
+    "libphonenumber-js": "^1.9.34",
     "@babel/runtime": "7.15.4",
     "react-hook-form": "7.15.3",
+    "react-router-dom": "^5.3.0",
     "@blueprintjs/core": "3.49.1",
     "@blueprintjs/icons": "3.29.0",
+    "@hookform/resolvers": "^2.8.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "react-lorem-component": "0.13.0",
     "@testing-library/react": "11.2.7",
     "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/user-event": "12.8.3"
+    "@testing-library/user-event": "12.8.3",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
