--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "normalize.css": "8.0.1",
     "react-scripts": "4.0.3",
     "@babel/runtime": "7.15.4",
+    "react-dropzone": "^11.4.2",
     "react-hook-form": "7.15.3",
+    "react-router-dom": "^5.3.0",
     "@blueprintjs/core": "3.49.1",
+    "@blueprintjs/icons": "3.29.0",
+    "libphonenumber-js": "^1.9.34",
+    "@hookform/resolvers": "^2.8.1",
     "react-lorem-component": "0.13.0",
     "@testing-library/react": "11.2.7",
     "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/user-event": "12.8.3"
+    "@testing-library/user-event": "12.8.3",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
