--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-lorem-component": "0.13.0",
     "@testing-library/react": "11.2.7",
     "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/user-event": "12.8.3",
+    "@testing-library/user-event": "12.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
