--- a/package.json
+++ b/package.json
@@ -3,20 +3,30 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "antd": "4.16.13",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "web-vitals": "1.1.2",
-    "normalize.css": "8.0.1",
-    "react-scripts": "4.0.3",
     "@babel/runtime": "7.15.4",
-    "react-hook-form": "7.15.3",
     "@blueprintjs/core": "3.49.1",
     "@blueprintjs/icons": "3.29.0",
-    "react-lorem-component": "0.13.0",
-    "@testing-library/react": "11.2.7",
+    "@hookform/resolvers": "^2.8.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/user-event": "12.8.3"
+    "@testing-library/react": "11.2.7",
+    "@testing-library/user-event": "12.8.3",
+    "@types/react": "^16.8.6 || ^17.0.0",
+    "antd": "4.16.13",
+    "libphonenumber-js": "^1.9.34",
+    "normalize.css": "8.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.0",
+    "react-hook-form": "7.15.3",
+    "react-lorem-component": "0.13.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
+    "typescript": "^3.2.1 || ^4",
+    "web-vitals": "1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
